Enable horizontal scrolling in the treeview. Fixes #2339

--- a/web/pgadmin/browser/static/css/browser.css
+++ b/web/pgadmin/browser/static/css/browser.css
@@ -45,3 +45,7 @@
 .pgadmin-node-select option {
   padding-left: 20px;
 }
+
+.aciTree .aciTreeLi div.aciTreeLine {
+  display: table !important;
+}
